--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -65,9 +65,11 @@ body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #212529;
+  color: #777;
   text-align: left;
   background-color: #fff;
+  background:  url('https://www.toptal.com/designers/subtlepatterns/patterns/memphis-mini.png');
+
 }
 
 [tabindex="-1"]:focus {
@@ -2244,7 +2246,7 @@ textarea.form-control {
 .was-validated .form-control:valid, .form-control.is-valid {
   border-color: #28a745;
   padding-right: calc(1.5em + 0.75rem);
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%2328a745' d='M2.3 6.73L.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e");
+  background-image: url('https://www.toptal.com/designers/subtlepatterns/patterns/memphis-mini.png');
   background-repeat: no-repeat;
   background-position: center right calc(0.375em + 0.1875rem);
   background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
@@ -10862,15 +10864,48 @@ a.text-dark:hover, a.text-dark:focus {
 
 form .row:first-child .floating-label-form-group {
   border-top: 1px solid #e9ecef;
+
+
+body{
+    background:  url('https://www.toptal.com/designers/subtlepatterns/patterns/memphis-mini.png');
+    font-size:  18px;
+    line-height: 34px;
+    font-family: 'Arial', 'Helvetica Neue,' Arial, Helvetica, sans-serif;
+    color:  #777;
+
+
+#main-conatiner {
+padding-top:  130px;
 }
 
-.footer {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
-  background-color: #2c3e50;
-  color: #fff;
+.main-section {
+    background:  #fff;
+    padding:  30px;
+    margin: 0 0 40 0;
+    width:  100%;
+    max-width:  650px;
+    float: left;
+    border:1 px solid #ddd;
+
 }
+.auth-image {
+  width:  200px;
+  height:  auto;
+  margin-top: 10px;
+  float:  left;
+  margin-right: 15px;
+
+
 
 .copyright {
-  background-color: #1a252f;
+  background:  #666;
+  color:  #fff;
+  clear: both;
+  border-top:  8px solid #4aaaa5;
+  color: #ccc;
+  font-size:  12px;
+  text-align:  center;
+  height:  50px;
+  Padding:  30px 0;
 }
+
