--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -67,9 +67,8 @@ body {
   line-height: 1.5;
   color: #777;
   text-align: left;
-  background-color: #fff;
+  background-color: #000;
   background:  url('https://www.toptal.com/designers/subtlepatterns/patterns/memphis-mini.png');
-
 }
 
 [tabindex="-1"]:focus {
@@ -86,6 +85,8 @@ hr {
 h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
   margin-bottom: 0.5rem;
+  padding-bottom:  60px;
+  text-align: left;
 }
 
 p {
@@ -205,10 +206,6 @@ figure {
   margin: 0 0 1rem;
 }
 
-img {
-  vertical-align: middle;
-  border-style: none;
-}
 
 svg {
   overflow: hidden;
@@ -10430,10 +10427,6 @@ a.text-light:hover, a.text-light:focus {
   color: #cbd3da !important;
 }
 
-.text-dark {
-  color: #343a40 !important;
-}
-
 a.text-dark:hover, a.text-dark:focus {
   color: #121416 !important;
 }
@@ -10462,6 +10455,7 @@ a.text-dark:hover, a.text-dark:focus {
   border: 0;
 }
 
+
 .text-decoration-none {
   text-decoration: none !important;
 }
@@ -10485,7 +10479,6 @@ a.text-dark:hover, a.text-dark:focus {
 
 @media print {
   *,
-  *::before,
   *::after {
     text-shadow: none !important;
     -webkit-box-shadow: none !important;
@@ -10507,6 +10500,7 @@ a.text-dark:hover, a.text-dark:focus {
   }
   thead {
     display: table-header-group;
+    
   }
   tr,
   img {
@@ -10727,7 +10721,7 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 .masthead {
-  padding-top: calc(6rem + 74px);
+  padding-top: calc(1rem + 74px);
   padding-bottom: 6rem;
 }
 
@@ -10738,10 +10732,6 @@ a.text-dark:hover, a.text-dark:focus {
 
 .masthead .masthead-subheading {
   font-size: 1.25rem;
-}
-
-.masthead .masthead-avatar {
-  width: 15rem;
 }
 
 @media (min-width: 992px) {
@@ -10843,8 +10833,6 @@ a.text-dark:hover, a.text-dark:focus {
   margin: 0;
   -webkit-transition: top 0.3s ease, opacity 0.3s ease;
   transition: top 0.3s ease, opacity 0.3s ease;
-  vertical-align: middle;
-  vertical-align: baseline;
   opacity: 0;
 }
 
@@ -10864,7 +10852,7 @@ a.text-dark:hover, a.text-dark:focus {
 
 form .row:first-child .floating-label-form-group {
   border-top: 1px solid #e9ecef;
-
+}
 
 body{
     background:  url('https://www.toptal.com/designers/subtlepatterns/patterns/memphis-mini.png');
@@ -10872,30 +10860,15 @@ body{
     line-height: 34px;
     font-family: 'Arial', 'Helvetica Neue,' Arial, Helvetica, sans-serif;
     color:  #777;
-
-
-#main-conatiner {
-padding-top:  130px;
 }
 
-.main-section {
-    background:  #fff;
-    padding:  30px;
-    margin: 0 0 40 0;
-    width:  100%;
-    max-width:  650px;
-    float: left;
-    border:1 px solid #ddd;
-
-}
 .auth-image {
-  width:  200px;
+  width:  350px;
   height:  auto;
   margin-top: 10px;
   float:  left;
-  margin-right: 15px;
-
-
+  margin: 15px 15px 15px;
+}
 
 .copyright {
   background:  #666;
